--- a/analysis/lightning_in_swaths.ipynb
+++ b/analysis/lightning_in_swaths.ipynb
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Method 2 (fast but not accurate)"
+    "## Method 2 (fast and enough accurate)"
    ]
   },
   {
