--- a/analysis/lightning_no2_production.ipynb
+++ b/analysis/lightning_no2_production.ipynb
@@ -75,17 +75,16 @@
    "outputs": [],
    "source": [
     "# output of `s5p_lnox_grid.py`\n",
-    "# lno2_grid = xr.open_dataset('../data/S5P_LNO2_grid.nc')['lno2'].sum(dim='swath', skipna=True)\n",
-    "lno2_grid = xr.open_dataset('../data/S5P_LNO2_grid.nc')['lno2_sum'].sum(dim='swath', skipna=True)\n",
-    "lightning_grid = xr.open_dataset('../data/S5P_LNO2_grid.nc')['lightning'].sum(dim='swath', skipna=True)\n",
-    "lightning_grid_500hpa = xr.open_dataset('../data/S5P_LNO2_grid.nc')['lightning_500hpa'].sum(dim='swath', skipna=True)\n",
+    "lno2_grid = xr.open_dataset('../data/lno2/S5P_LNO2_grid.nc')['lno2_sum'].sum(dim='swath', skipna=True)\n",
+    "lightning_grid = xr.open_dataset('../data/lno2/S5P_LNO2_grid.nc')['lightning'].sum(dim='swath', skipna=True)\n",
+    "lightning_grid_500hpa = xr.open_dataset('../data/lno2/S5P_LNO2_grid.nc')['lightning_500hpa'].sum(dim='swath', skipna=True)\n",
     "\n",
     "# corrected by detection efficiency and IC:CG ratio (~1)\n",
     "lightning_grid *= 4\n",
     "lightning_grid_500hpa *= 4\n",
     "\n",
-    "lno2_emiss_pixel = xr.open_dataset('../data/S5P_LNO2_grid.nc')['lno2_max'].max(dim=['longitude', 'latitude'])#.mean(dim='swath')\n",
-    "#lno2_emiss_pixel_std = xr.open_dataset('../data/S5P_LNO2_grid.nc')['lno2_max'].max(dim=['longitude', 'latitude']).std(dim='swath')"
+    "lno2_emiss_pixel = xr.open_dataset('../data/lno2/S5P_LNO2_grid.nc')['lno2_max'].max(dim=['longitude', 'latitude'])#.mean(dim='swath')\n",
+    "#lno2_emiss_pixel_std = xr.open_dataset('../data/lno2/S5P_LNO2_grid.nc')['lno2_max'].max(dim=['longitude', 'latitude']).std(dim='swath')"
    ]
   },
   {
@@ -132,11 +131,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cq/3gpzzbcn09v0cq17f4n6hjcr0000gn/T/ipykernel_13284/271999880.py:15: ProplotWarning: Calling arbitrary axes methods from SubplotGrid was deprecated in v0.8 and will be removed in a future release. Please index the grid or loop over the grid instead.\n",
+      "/var/folders/cq/3gpzzbcn09v0cq17f4n6hjcr0000gn/T/ipykernel_10880/271999880.py:15: ProplotWarning: Calling arbitrary axes methods from SubplotGrid was deprecated in v0.8 and will be removed in a future release. Please index the grid or loop over the grid instead.\n",
       "  axs.stock_img()\n",
-      "/var/folders/cq/3gpzzbcn09v0cq17f4n6hjcr0000gn/T/ipykernel_13284/271999880.py:16: ProplotWarning: Calling arbitrary axes methods from SubplotGrid was deprecated in v0.8 and will be removed in a future release. Please index the grid or loop over the grid instead.\n",
+      "/var/folders/cq/3gpzzbcn09v0cq17f4n6hjcr0000gn/T/ipykernel_10880/271999880.py:16: ProplotWarning: Calling arbitrary axes methods from SubplotGrid was deprecated in v0.8 and will be removed in a future release. Please index the grid or loop over the grid instead.\n",
       "  axs.text(-42, 77, '80$^{\\circ}$ N', rotation=-45, transform=ccrs.PlateCarree())\n",
-      "/var/folders/cq/3gpzzbcn09v0cq17f4n6hjcr0000gn/T/ipykernel_13284/271999880.py:17: ProplotWarning: Calling arbitrary axes methods from SubplotGrid was deprecated in v0.8 and will be removed in a future release. Please index the grid or loop over the grid instead.\n",
+      "/var/folders/cq/3gpzzbcn09v0cq17f4n6hjcr0000gn/T/ipykernel_10880/271999880.py:17: ProplotWarning: Calling arbitrary axes methods from SubplotGrid was deprecated in v0.8 and will be removed in a future release. Please index the grid or loop over the grid instead.\n",
       "  axs.text(55, 77, 'Kara Sea', rotation=120, transform=ccrs.PlateCarree(), color='w')\n"
      ]
     },
@@ -557,7 +556,7 @@
        "  fill: currentColor;\n",
        "}\n",
        "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray &#x27;lno2_sum&#x27; ()&gt;\n",
-       "array(5101102.49252697)</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'lno2_sum'</div></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-19f5789d-0fe6-4dc8-b683-824d61210668' class='xr-array-in' type='checkbox' checked><label for='section-19f5789d-0fe6-4dc8-b683-824d61210668' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>5.101e+06</span></div><div class='xr-array-data'><pre>array(5101102.49252697)</pre></div></div></li><li class='xr-section-item'><input id='section-f165ea25-e072-4883-9d4c-a59e9e9afa1b' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-f165ea25-e072-4883-9d4c-a59e9e9afa1b' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-4634f8bd-2a86-424c-b8de-b60256f5e538' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-4634f8bd-2a86-424c-b8de-b60256f5e538' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-560f15da-3de5-4df5-9829-a31703ad7329' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-560f15da-3de5-4df5-9829-a31703ad7329' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "array(5101102.49252697)</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'lno2_sum'</div></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-8659d9c9-f7ad-4f33-8b78-0934cf8021fd' class='xr-array-in' type='checkbox' checked><label for='section-8659d9c9-f7ad-4f33-8b78-0934cf8021fd' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>5.101e+06</span></div><div class='xr-array-data'><pre>array(5101102.49252697)</pre></div></div></li><li class='xr-section-item'><input id='section-34ee70e2-1027-49a7-9ecc-581ab5b1581f' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-34ee70e2-1027-49a7-9ecc-581ab5b1581f' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-acebdc2a-eaf0-429a-a9b8-b00e8b97659e' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-acebdc2a-eaf0-429a-a9b8-b00e8b97659e' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-98a69941-529b-4937-8245-154d4b678abd' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-98a69941-529b-4937-8245-154d4b678abd' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'lno2_sum' ()>\n",
@@ -590,9 +589,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cq/3gpzzbcn09v0cq17f4n6hjcr0000gn/T/ipykernel_13284/3430836917.py:15: ProplotWarning: Calling arbitrary axes methods from SubplotGrid was deprecated in v0.8 and will be removed in a future release. Please index the grid or loop over the grid instead.\n",
+      "/var/folders/cq/3gpzzbcn09v0cq17f4n6hjcr0000gn/T/ipykernel_10880/3430836917.py:15: ProplotWarning: Calling arbitrary axes methods from SubplotGrid was deprecated in v0.8 and will be removed in a future release. Please index the grid or loop over the grid instead.\n",
       "  axs.stock_img()\n",
-      "/var/folders/cq/3gpzzbcn09v0cq17f4n6hjcr0000gn/T/ipykernel_13284/3430836917.py:16: ProplotWarning: Calling arbitrary axes methods from SubplotGrid was deprecated in v0.8 and will be removed in a future release. Please index the grid or loop over the grid instead.\n",
+      "/var/folders/cq/3gpzzbcn09v0cq17f4n6hjcr0000gn/T/ipykernel_10880/3430836917.py:16: ProplotWarning: Calling arbitrary axes methods from SubplotGrid was deprecated in v0.8 and will be removed in a future release. Please index the grid or loop over the grid instead.\n",
       "  axs.text(-42, 77, '80$^{\\circ}$ N', rotation=-45, transform=ccrs.PlateCarree())\n"
      ]
     },
@@ -666,7 +665,7 @@
     "\n",
     "    return df_lno2\n",
     "\n",
-    "df_lno2 = pd.read_csv('../data/S5P_LNO2_production.csv')\n",
+    "df_lno2 = pd.read_csv('../data/lno2/S5P_LNO2_production.csv')\n",
     "df_lno2 = filter_case(df_lno2)\n",
     "\n",
     "# corrected stroke considering the detection efficiency\n",
