--- a/analysis/lnox_profile_fit.ipynb
+++ b/analysis/lnox_profile_fit.ipynb
@@ -49,7 +49,7 @@
     "z = (np.arange(0, 18)[:-1]+np.arange(0, 18)[1:])/2\n",
     "p = height_to_pressure_std(z*units.kilometer).magnitude\n",
     "\n",
-    "df_luo = pd.read_csv('../data/luo_2016.csv', header=None, names=['lnox', 'height'])\n",
+    "df_luo = pd.read_csv('../data/lno2/luo_2016.csv', header=None, names=['lnox', 'height'])\n",
     "p_luo = height_to_pressure_std(df_luo['height'].values*units.kilometer).magnitude\n",
     "\n",
     "ott_subtrop = np.array([1.0, 2.1, 3.9, 5.8,  7.7,  9.3, 10.5, 11.0, 11.0, 10.4, 9.2,   7.5,  5.5,  3.4, 1.5,  .2, 0.0])\n",
