--- a/analysis/pe_uncertainty.ipynb
+++ b/analysis/pe_uncertainty.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "- peak width of a priori LNO2 profile (160 hPa, 180 hPa, and 200 hPa)\n",
     "- SCD background (10th and 30th percentile)\n",
-    "- NO2 lifetime (2 hour, 3 hour, and 6 hour)\n",
+    "- NO2 lifetime (2 hour, 3 hour, and 4 hour)\n",
     "- IC:CG (2:1, 1:1, and 1:2)\n",
     "- confidence level for LNO$_2$ selection (80% and 70%)\n",
     "- cloud pressure ($\\pm$ 50 hPa)"
@@ -115,7 +115,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_lno2 = read_data('../data/S5P_LNO2_production.csv')\n",
+    "data_dir = '../data/lno2'\n",
+    "df_lno2 = read_data(f'{data_dir}/S5P_LNO2_production.csv')\n",
     "\n",
     "correct_lightning(df_lno2, coeff=4)\n",
     "\n",
@@ -155,10 +156,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_lno2_high_pw = read_data('../data/S5P_LNO2_production_peakwidth200.csv')\n",
+    "df_lno2_high_pw = read_data(f'{data_dir}/S5P_LNO2_production_peakwidth200.csv')\n",
     "correct_lightning(df_lno2_high_pw, coeff=4)\n",
     "\n",
-    "df_lno2_low_pw = read_data('../data/S5P_LNO2_production_peakwidth160.csv')\n",
+    "df_lno2_low_pw = read_data(f'{data_dir}/S5P_LNO2_production_peakwidth160.csv')\n",
     "correct_lightning(df_lno2_low_pw, coeff=4)"
    ]
   },
@@ -209,10 +210,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_lno2_low_tau = read_data('../data/S5P_LNO2_production_tau2.csv')\n",
+    "df_lno2_low_tau = read_data(f'{data_dir}/S5P_LNO2_production_tau2.csv')\n",
     "correct_lightning(df_lno2_low_tau, coeff=4)\n",
     "\n",
-    "df_lno2_high_tau = read_data('../data/S5P_LNO2_production_tau4.csv')\n",
+    "df_lno2_high_tau = read_data(f'{data_dir}/S5P_LNO2_production_tau4.csv')\n",
     "correct_lightning(df_lno2_high_tau, coeff=4)\n",
     "\n",
     "pe_coast_high_tau, pe_land_high_tau, pe_ocean_high_tau, pe_high_tau = perturb(df_lno2_high_tau)\n",
@@ -256,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_lno2_low_bkgd = read_data('../data/S5P_LNO2_production_bkgd10.csv')\n",
+    "df_lno2_low_bkgd = read_data(f'{data_dir}/S5P_LNO2_production_bkgd10.csv')\n",
     "correct_lightning(df_lno2_low_bkgd, coeff=4)\n",
     "\n",
     "pe_coast_low_bkgd, pe_land_low_bkgd, pe_ocean_low_bkgd, pe_low_bkgd = perturb(df_lno2_low_bkgd)"
@@ -299,11 +300,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_lno2_low_ratio = read_data('../data/S5P_LNO2_production.csv')\n",
+    "df_lno2_low_ratio = read_data(f'{data_dir}/S5P_LNO2_production.csv')\n",
     "correct_lightning(df_lno2_low_ratio, coeff=3)\n",
     "pe_coast_low_ratio, pe_land_low_ratio, pe_ocean_low_ratio, pe_low_ratio = perturb(df_lno2_low_ratio)\n",
     "\n",
-    "df_lno2_high_ratio = read_data('../data/S5P_LNO2_production.csv')\n",
+    "df_lno2_high_ratio = read_data(f'{data_dir}/S5P_LNO2_production.csv')\n",
     "correct_lightning(df_lno2_high_ratio, coeff=6)\n",
     "pe_coast_high_ratio, pe_land_high_ratio, pe_ocean_high_ratio, pe_high_ratio = perturb(df_lno2_high_ratio)"
    ]
@@ -346,7 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_lno2_high_alpha = read_data('../data/S5P_LNO2_production_alpha30.csv')\n",
+    "df_lno2_high_alpha = read_data(f'{data_dir}/S5P_LNO2_production_alpha30.csv')\n",
     "correct_lightning(df_lno2_high_alpha, coeff=4)\n",
     "\n",
     "pe_coast_high_alpha, pe_land_high_alpha, pe_ocean_high_alpha, pe_high_alpha = perturb(df_lno2_high_alpha)"
@@ -390,10 +391,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_lno2_low_cp = read_data('../data/S5P_LNO2_production_peakoffest50.csv')\n",
+    "df_lno2_low_cp = read_data(f'{data_dir}/S5P_LNO2_production_peakoffest50.csv')\n",
     "correct_lightning(df_lno2_low_cp, coeff=4)\n",
     "\n",
-    "df_lno2_high_cp = read_data('../data/S5P_LNO2_production_peakoffest-50.csv')\n",
+    "df_lno2_high_cp = read_data(f'{data_dir}/S5P_LNO2_production_peakoffest-50.csv')\n",
     "correct_lightning(df_lno2_high_cp, coeff=4)\n",
     "\n",
     "pe_coast_high_cp, pe_land_high_cp, pe_ocean_high_cp, pe_high_cp = perturb(df_lno2_high_cp)\n",
